# STM32-starter

./: .gitignore  README.md  meson.build
build-stm32/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json
build-stm32/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-projectinfo.json  intro-targets.json  meson-info.json
build-stm32/meson-logs/: meson-log.txt
build-stm32/meson-private/: cmd_line.txt  coredata.dat.prev  sanitycheckc_cross.su  sanitycheckcpp_cross.su
build-stm32/src/: print_test
build-stm32/src/25a6634@@blink_raw@exe/: .._subprojects_libopencm3_lib_cm3_nvic.c.su  .._subprojects_libopencm3_lib_stm32_can.c.su  .._subprojects_libopencm3_lib_stm32_common_adc_common_v1.c.su  .._subprojects_libopencm3_lib_stm32_common_adc_common_v1_multi.c.su  .._subprojects_libopencm3_lib_stm32_common_dac_common_all.c.su  .._subprojects_libopencm3_lib_stm32_common_exti_common_all.c.su  .._subprojects_libopencm3_lib_stm32_common_flash_common_all.c.su  .._subprojects_libopencm3_lib_stm32_common_flash_common_f.c.su  .._subprojects_libopencm3_lib_stm32_common_flash_common_f24.c.su  .._subprojects_libopencm3_lib_stm32_common_hash_common_f24.c.su  .._subprojects_libopencm3_lib_stm32_common_i2c_common_v1.c.su  .._subprojects_libopencm3_lib_stm32_common_lptimer_common_all.c.su  .._subprojects_libopencm3_lib_stm32_common_ltdc_common_f47.c.su  .._subprojects_libopencm3_lib_stm32_common_pwr_common_v1.c.su  .._subprojects_libopencm3_lib_stm32_common_rcc_common_all.c.su  (+6 more)
cross-compile/stm32/: meson.build
src/: meson.build
(+33 files in other folders)
